--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.4.1",
+    "@aws-sdk/s3-request-presigner": "^3.4.1",
     "@google-cloud/storage": "^5.7.1",
     "@nestjs/common": "^7.5.1",
     "@nestjs/config": "^0.6.1",
@@ -31,6 +33,7 @@
     "@types/cookie": "^0.4.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.5.0",
+    "aws-sdk": "^2.836.0",
     "bcrypt-nodejs": "0.0.3",
     "class-transformer": "^0.3.2",
     "class-validator": "^0.13.0",
