--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/cookie-parser": "^1.4.2",
     "@types/jsonwebtoken": "^8.5.0",
     "aws-sdk": "^2.836.0",
+    "axios": "^0.21.1",
     "backblaze-b2": "^1.6.0",
     "bcrypt-nodejs": "0.0.3",
     "class-transformer": "^0.3.2",
